--- a/flexbox8.5.html
+++ b/flexbox8.5.html
@@ -12,9 +12,9 @@
         <aside>Aside</aside>
         <article>Article
             <br>
-            <img class="img" src="image/gambar2.jpg" alt="">
-            <img class="img" src="image/gambar5.jpg" alt="">
-            <img class="img" src="image/gambar6.jpg" alt="">
+            <img class="img" src="image/gambar2.jpg" alt="ini gambar pitik ayam">
+            <img class="img" src="image/gambar5.jpg" alt="ini gambar marmut">
+            <img class="img" src="image/gambar6.jpg" alt="ini gambar burung">
         </article>
     </div>
     <footer>Footer</footer>
